<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDC2F4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="343dp"
        android:layout_height="46dp"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:padding="10sp"
        android:paddingStart="20sp"
        android:text="@string/welcome_to_unconvertow"
        android:textColor="#0B0A0A"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="180dp"
        android:layout_height="24dp"
        android:paddingLeft="10sp"
        android:text="@string/created_by_miteshtank"
        android:textColor="#1C1B1B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.907"
        android:paddingStart="10sp" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="279dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="#B39DDB"
        android:ems="10"
        android:hint="@string/enter_kg_amount"
        android:inputType="number"
        android:padding="10sp"
        android:textColor="#F8F8F8"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.237" />

    <Button
        android:id="@+id/button"
        android:layout_width="273dp"
        android:layout_height="61dp"
        android:onClick="btnClick"
        android:text="@string/get_pound_amount"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
        app:layout_constraintVertical_bias="0.444" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="319dp"
        android:layout_height="36dp"
        android:textColor="#7535E8"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="280dp"
        android:layout_height="37dp"
        android:text="@string/kilograms_to_pound_converter"
        android:textColor="#221D1D"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.506" />

</androidx.constraintlayout.widget.ConstraintLayout>